<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar_actionbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">


            <TextView
                style="@style/AboutTextViews"
                android:text="@string/about_title" />

            <TextView
                android:id="@+id/txt_app_name_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/about_app_name"
                android:textColor="@color/list_item_text_color"
                android:textSize="23sp" />

            <TextView
                android:id="@+id/about_dev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="15dp"
                android:text="@string/about_developer"
                android:textColor="@color/list_item_text_color"
                android:textSize="23sp" />

            <TextView
                android:id="@+id/description"
                style="@style/AboutTextViews"
                android:text="@string/about_content_source" />

            <TextView
                style="@style/AboutTextViews"
                android:autoLink="all"
                android:text="@string/about_contact" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>