<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar_actionbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="com.shagalalab.marshrutka.activity.DetailActivity">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:gravity="center_horizontal"
                android:textStyle="italic"
                android:textSize="18sp"
                android:text="@string/type_of_transport" />

            <TextView
                android:id="@+id/txt_typeoftransport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:textSize="24sp"
                android:textColor="@android:color/primary_text_light"
                android:gravity="center_horizontal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingTop="30dp"
                android:textStyle="italic"
                android:textSize="18sp"
                android:text="@string/transport_number" />

            <TextView
                android:id="@+id/txt_transportnumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="40sp"
                android:textColor="@android:color/primary_text_light"
                android:gravity="center_horizontal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingBottom="10dp"
                android:textStyle="italic"
                android:textSize="18sp"
                android:gravity="center_horizontal"
                android:text="@string/destinations" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.shagalalab.marshrutka.widget.PathDrawer
                    android:id="@+id/path_drawer"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>

                <LinearLayout
                    android:id="@+id/destination_txt_container"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:orientation="vertical"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>